--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "application/libraries/curl"]
 	path = application/libraries/curl
 	url = git@github.com:thebizztech/Simple-Codeigniter-Curl-PHP-Class.git
+[submodule "application/libraries/pdt"]
+	path = application/libraries/pdt
+	url = https://github.com/thebizztech/pdt
